--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
 openai==0.26.4
+pytube==12.1.2
 requests==2.28.2
 tqdm==4.64.1
 typing-extensions==4.4.0
 urllib3==1.26.14
 yarl==1.8.2
+youtube-transcript-api==0.5.0
